--- a/Desktop/capstone/package.json
+++ b/Desktop/capstone/package.json
@@ -8,14 +8,20 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["book", "music", "playlist", "web"],
+  "keywords": [
+    "book",
+    "music",
+    "playlist",
+    "web"
+  ],
   "author": "BookMusic Team",
   "license": "MIT"
-} 
+}
